<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/oompa_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/oompa_card_image"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/oompa_card_image"
            android:layout_toRightOf="@id/oompa_card_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oompa_card_full_name"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/full_name_sample"/>

            <TextView
                android:id="@+id/oompa_card_profession_and_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="@string/profession_and_age_sample"/>

        </LinearLayout>

        <TextView
            android:id="@+id/oompa_card_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/oompa_card_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/triangle"
            android:gravity="end|bottom"
            android:paddingBottom="2dp"
            android:paddingRight="4dp"
            android:textColor="#DDDDDD"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            tools:text="@string/male_abr"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>